--- a/lab9/style.css
+++ b/lab9/style.css
@@ -7,11 +7,13 @@ body {
 }
 
 .space-bg {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://i.imgur.com/6Vx0v7o.jpeg') center/cover;
-    filter: brightness(0.4);
+    background: radial-gradient(circle at center, #0a0a0a 0%, #000000 100%);
+    z-index: -1;
 }
 
 .navbar {
